<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserDashboard"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/draw_menu"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu"
            android:layout_centerVertical="true"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/acme"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/dgrey"/>

    </RelativeLayout>
    
        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/dashb_walking_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_centerInParent="true"
                            android:background="@color/pastel1"
                            android:padding="12dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/walkingf" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/walking"
                        android:textAlignment="center"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dashb_training_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_centerInParent="true"
                            android:background="@color/pastel2"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/trainf" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/training"
                        android:textAlignment="center"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dashb_oc_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_centerInParent="true"
                            android:background="@color/pastel4"
                            android:scaleType="fitCenter"
                            android:src="@drawable/overnight_care" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/petcare"
                        android:textAlignment="center"
                        android:textColor="@color/black" />


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offers"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/acme"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/acme"
                        android:text="@string/view_all"
                        android:textColor="@color/dgrey"
                        android:textSize="15sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/offer_recycler"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/white">


                <RelativeLayout
                    android:id="@+id/offers_bg"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reviewdog"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="29dp"
                        android:fontFamily="@font/acme"
                        android:lineSpacingExtra="10sp"
                        android:text="@string/reviews"
                        android:textAllCaps="true"
                        android:textColor="@color/ban1"
                        android:textSize="30sp" />

                    <ImageView
                        android:id="@+id/reviewdog"
                        android:layout_width="170dp"
                        android:layout_height="100dp"
                        android:src="@drawable/reviewdog"
                        android:padding="2dp"/>


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/review_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@+id/offers_bg"
                    android:background="@color/white" />




            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:text="@string/contact"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/acme"
                        android:text="@string/view_all"
                        android:textColor="@color/dgrey"
                        android:textSize="15sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/contact_recycler"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    </LinearLayout>




</androidx.drawerlayout.widget.DrawerLayout>